Added demonstration title.

--- a/less/inline-menu.less
+++ b/less/inline-menu.less
@@ -12,6 +12,13 @@
         text-align: center;
         background: @white;
         .mxGlow(20px);
+        .inline-menu-label {
+            position: absolute;
+            top: 0;
+            left: 0;
+            .component-title;
+            opacity: 0.2;
+        }
         .inline-menu-item-container {
             display: inline-block;
             padding: @item-padding;
