--- a/templates/inline-menu.hbs
+++ b/templates/inline-menu.hbs
@@ -1,4 +1,7 @@
 <div class="inline-menu-inner">
+	{{!-- Demonstration title, comment/delete below line to remove it --}}
+	<div class="inline-menu-label">adapt-inline-menu</div>
+	
 	<div class="inline-menu-item-container">
 	{{#each _items}}
 	<div class="inline-menu-item {{_type}}">
