--- a/less/inline-menu.less
+++ b/less/inline-menu.less
@@ -14,10 +14,12 @@
         .mxGlow(20px);
         .inline-menu-label {
             position: absolute;
-            top: 0;
-            left: 0;
-            .component-title;
-            opacity: 0.2;
+            top: 18px;
+            left: 24px;
+            font-size: 18px;
+            font-weight: 300;
+            opacity: 0.3;
+            line-height: 120%;
         }
         .inline-menu-item-container {
             display: inline-block;
