--- a/templates/inline-menu.hbs
+++ b/templates/inline-menu.hbs
@@ -1,6 +1,6 @@
 <div class="inline-menu-inner">
 	{{!-- Demonstration title, comment/delete below line to remove it --}}
-	<div class="inline-menu-label">Adapt Inline Menu<br>Extension Example</div>
+	<div class="inline-menu-label">Adapt Inline Menu<br>Extension Demo</div>
 	
 	<div class="inline-menu-item-container">
 	{{#each _items}}
