--- a/templates/inline-menu.hbs
+++ b/templates/inline-menu.hbs
@@ -1,3 +1,4 @@
+{{! Maintainer - Kunj kunjsharma@hotmail.com}}
 <div class="inline-menu-inner">
 	{{!-- Demonstration title, comment/delete below line to remove it --}}
 	<div class="inline-menu-label">Adapt Inline Menu<br>Extension Demo</div>
