--- a/less/inline-menu.less
+++ b/less/inline-menu.less
@@ -29,22 +29,22 @@
                 text-align: center;
                 width: 77px;
                 .button, button {
-                    font-size: @body-text-font-size - 2px;
+                    font-size: @body-size - 0.3rem;
                     text-align: center;
-                    color: @primary-color;
+                    color: @blue;
                     line-height: 100%;
                     &.visited {
                         color: @red;
                     }
                     &.completed {
-                        color: @light-grey;
+                        color: @grey;
                     }
                 }
                 .inline-menu-item-status {
                     width: 12px;
                     height: 12px;
-                    border: 1px solid @primary-color;
-                    background: @primary-color;
+                    border: 1px solid @blue;
+                    background: @blue;
                     box-sizing: border-box;
                     border-radius: 50%;
                     margin: 0 auto;
